minio-virtual-service.yaml
# конфиг, который направит запросы с s-lot.ru/lots-images/ на сервис MinIO
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: s-lot-routes
  namespace: istio-system # Там же, где ваш Gateway
spec:
  hosts:
  - "s-lot.ru"
  - "www.s-lot.ru"
  gateways:
  - main-gateway # Имя Gateway из файла gateway.yaml
  http:
  # --- Правило для картинок MinIO ---
  - match:
    - uri:
        prefix: /lots-images
    route:
    - destination:
        host: minio.storage.svc.cluster.local # Полное DNS имя сервиса MinIO
        port:
          number: 9000

  # --- Правило для API (пример) ---
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: backend-service.production.svc.cluster.local
        port:
          number: 80

  # --- Правило для Frontend (все остальное) ---
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend-service.production.svc.cluster.local
        port:
          number: 3000
