virtual-service.yaml
# virtual-service.yaml
# (описывает маршрутизацию: какой путь /api или /lots-images куда отправлять)
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: main-virtual-service
  namespace: default
spec:
  gateways:
  - istio-system/main-gateway
  hosts:
  - "s-lot.ru"
  - "www.s-lot.ru"
  http:
  # СТАБИЛЬНОЕ ПРАВИЛО ДЛЯ CERT-MANAGER
  - name: "cert-manager-challenge"
    match:
    - uri:
        prefix: "/.well-known/acme-challenge/"
    route:
    - destination:
        # Всегда направляем на наш стабильный сервис
        host: "acme-solver-service.istio-system.svc.cluster.local"
        port:
          number: 8089

  # ПРАВИЛО ДЛЯ API
  - name: "api-routing"
    match:
    # Правило сработает для /api на обоих доменах
    - authority:
        exact: "s-lot.ru"
      uri:
        prefix: "/api"
    - authority:
        exact: "www.s-lot.ru"
      uri:
        prefix: "/api"
    corsPolicy:
      allowOrigins:
      - exact: "https://s-lot.ru"
      - exact: "https://www.s-lot.ru"
      allowMethods:
      - GET
      - POST
      - PUT
      - OPTIONS
      - DELETE
      allowHeaders:
      - "*"
      allowCredentials: true
    rewrite:
      uri: "/api"
    route:
    - destination:
        host: parser-service.default.svc.cluster.local
        port:
          number: 8080

  # ПРАВИЛО РЕДИРЕКТА C WWW (сработает, только если запрос не к /api)
  - name: "www-redirect"
    match:
    - authority:
        exact: "www.s-lot.ru"
    redirect:
      authority: "s-lot.ru"
      redirectCode: 301

  # ПРАВИЛО ПО УМОЛЧАНИЮ ДЛЯ FRONTEND
  - name: "frontend-routing"
    route:
    - destination:
        host: frontend-service.default.svc.cluster.local
        port:
          number: 3000
